--- a/.github/workflows/main_webunity-to-azure.yml
+++ b/.github/workflows/main_webunity-to-azure.yml
@@ -23,6 +23,10 @@ jobs:
               with:
                   node-version: "22.x"
 
+            - name: npm install
+              run: |
+                  npm install
+
             - name: Zip artifact for deployment
               run: zip release.zip ./* -r
 
