--- a/.github/workflows/main_webunity-to-azure.yml
+++ b/.github/workflows/main_webunity-to-azure.yml
@@ -4,68 +4,71 @@
 name: Build and deploy Node.js app to Azure Web App - webunity-to-azure
 
 on:
-    push:
-        branches:
-            - main
-    workflow_dispatch:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        permissions:
-            contents: read #This is required for actions/checkout
+  build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read #This is required for actions/checkout
 
-        steps:
-            - uses: actions/checkout@v4
+    steps:
+      - uses: actions/checkout@v4
 
-            - name: Set up Node.js version
-              uses: actions/setup-node@v3
-              with:
-                  node-version: "22.x"
+      - name: Set up Node.js version
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22.x'
 
-            - name: npm install
-              run: |
-                  npm install
+      - name: npm install, build, and test
+        run: |
+          npm install
+          npm run build --if-present
+          npm run test --if-present
 
-            - name: Zip artifact for deployment
-              run: zip release.zip ./* -r
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
-            - name: Upload artifact for deployment job
-              uses: actions/upload-artifact@v4
-              with:
-                  name: node-app
-                  path: release.zip
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-app
+          path: release.zip
 
-    deploy:
-        runs-on: ubuntu-latest
-        needs: build
-        environment:
-            name: "Production"
-            url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-        permissions:
-            id-token: write #This is required for requesting the JWT
-            contents: read #This is required for actions/checkout
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
 
-        steps:
-            - name: Download artifact from build job
-              uses: actions/download-artifact@v4
-              with:
-                  name: node-app
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: node-app
 
-            - name: Unzip artifact for deployment
-              run: unzip release.zip
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
+      
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B199BBF061544DA589997FC8529AF07A }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_1D66037F39D94816A9FCD517DB1311F2 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D4A2BCE76BD1487AB0AE9C51F9285C69 }}
 
-            - name: Login to Azure
-              uses: azure/login@v2
-              with:
-                  client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C791FFE603124B55929B78873E317E5A }}
-                  tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4541E73CBB4D460C88BC7D9A35399202 }}
-                  subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C7550823D5AF4B3297CE5FF602D795AA }}
-
-            - name: "Deploy to Azure Web App"
-              id: deploy-to-webapp
-              uses: azure/webapps-deploy@v3
-              with:
-                  app-name: "webunity-to-azure"
-                  slot-name: "Production"
-                  package: .
+      - name: 'Deploy to Azure Web App'
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'webunity-to-azure'
+          slot-name: 'Production'
+          package: .
+          
