--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Variables d'environnement pour l'application
 NODE_ENV=production
 PORT=3000
-
+DATABASE_URL=postgres://todolist_user:todolist_user@localhost:5432/todolist_db
 
 # Autres configurations
 APP_NAME=Azure Node.js App
